[package]
name = "optimization-testing"
version = "0.1.0"
authors = ["carterisonline <carter.reeb.developer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5"
num = "0.3.1"

[profile.dev] # Default release profile WITHOUT optimizations
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = true
codegen-units = 16
rpath = false

[profile.release] # Release profile with added optimizations
# rustflags = ["-C", "link-arg=-fuse-ld=lld"]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
force-frame-pointers = true
incremental = false
codegen-units = 1
rpath = false
link-dead-code = false
linker-flavor = "gcc"